<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <parent>
        <artifactId>yangkit-parent</artifactId>
        <groupId>io.github.yang-central.yangkit</groupId>
        <version>1.6.0</version>
    </parent>
    <modelVersion>4.0.0</modelVersion>

    <artifactId>yangkit-data-proto-codec</artifactId>
    <name>yangkit-data-proto-codec</name>

    <dependencies>
        <dependency>
            <groupId>io.github.yang-central.yangkit</groupId>
            <artifactId>yangkit-data-api</artifactId>
            <version>${io.github.yang-central.yangkit.yangkit-data-api.version}</version>
        </dependency>
        <dependency>
            <groupId>io.github.yang-central.yangkit</groupId>
            <artifactId>yangkit-data-impl</artifactId>
            <version>${io.github.yang-central.yangkit.yangkit-data-impl.version}</version>
        </dependency>
        <dependency>
            <groupId>io.github.yang-central.yangkit</groupId>
            <artifactId>yangkit-data-json-codec</artifactId>
            <version>${io.github.yang-central.yangkit.yangkit-data-json-codec.version}</version>
        </dependency>
        <dependency>
            <groupId>io.github.yang-central.yangkit</groupId>
            <artifactId>yangkit-parser</artifactId>
            <version>${io.github.yang-central.yangkit.yangkit-parser.version}</version>
        </dependency>
        <dependency>
            <groupId>com.google.protobuf</groupId>
            <artifactId>protobuf-java</artifactId>
            <version>${com.google.protobuf.version}</version>
        </dependency>
        <dependency>
            <groupId>com.google.protobuf</groupId>
            <artifactId>protobuf-java-util</artifactId>
            <version>${com.google.protobuf.version}</version>
        </dependency>
        <!-- JUnit 4 kept for backward compatibility -->
        <dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
            <version>4.13.2</version>
            <scope>test</scope>
        </dependency>
        <!-- JUnit 5 (Jupiter) — used by the test classes in this module -->
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter</artifactId>
            <version>5.10.1</version>
            <scope>test</scope>
        </dependency>
    </dependencies>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.10.1</version>
                <configuration>
                    <source>1.8</source>
                    <target>1.8</target>
                    <encoding>UTF-8</encoding>
                </configuration>
            </plugin>
            <!-- Surefire 3.x picks up both JUnit 4 and JUnit 5 tests automatically -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>3.2.5</version>
            </plugin>
        </plugins>
    </build>

</project>
